fix text overflow in search results

--- a/src/main/resources/assets/search-styles/search-nav.css
+++ b/src/main/resources/assets/search-styles/search-nav.css
@@ -287,6 +287,7 @@ input[type=radio]:focus + label {
 }
 
 .sokeresultatContainer .sokeresultatliste li a p.resultattekst {
+    word-break: break-word;
     margin-top: 11px;
     font-size: 1rem;
 }
